[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxy"
description = "Marketplace - an example for sqlalchemy-tutorial"
version = "0.0.1"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "Aya Elsayed", email = "ayah.ehab11@gmail.com" },
  { name = "Rhythm Patel", email = "rhythmpatel200@gmail.com" },
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["marketsvc"]
